--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-.section {
-	@apply bg-red-100;
+body {
+	// Gradient
+	@apply bg-gradient-to-t from-green-900/10 to-blue-800/10 bg-no-repeat bg-black
+	text-white;
 }
