--- a/site/src/styles/index.scss
+++ b/site/src/styles/index.scss
@@ -3,11 +3,16 @@
 @tailwind utilities;
 
 section {
+	@apply container max-w-screen-lg mx-auto;
 	padding: 2rem;
 	h2 {
-		@apply font-bold text-4xl;
+		@apply font-bold text-4xl mb-2;
 	}
 	h3 {
 		@apply font-bold text-2xl;
 	}
+}
+
+.card {
+	@apply border-2 border-black p-8 rounded;
 }
