--- a/site/src/styles/index.scss
+++ b/site/src/styles/index.scss
@@ -2,17 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+	background-color: #000030;
+	@apply text-white;
+}
+
 section {
 	@apply container max-w-screen-lg mx-auto;
 	padding: 2rem;
 	h2 {
-		@apply font-bold text-4xl mb-2;
+		@apply font-bold text-4xl mb-8;
 	}
 	h3 {
-		@apply font-bold text-2xl;
+		@apply font-bold text-2xl mt-8 mb-3;
 	}
 }
 
 .card {
 	@apply border-2 border-black p-8 rounded;
+}
+
+.shadow-hover-lg {
+	@apply hover:shadow-primary/60 hover:shadow-lg shadow-sm transition-shadow;
+}
+
+.shadow-hover-2xl {
+	@apply hover:shadow-primary/50 hover:shadow-2xl shadow-sm transition-shadow;
 }
