--- a/site/src/styles/index.scss
+++ b/site/src/styles/index.scss
@@ -31,7 +31,7 @@ section {
 }
 
 .button {
-	@apply px-8 py-3 rounded-md text-white bg-primary shadow-hover-lg;
+	@apply px-8 py-3 rounded-md text-white bg-orange shadow-hover-lg;
 }
 
 .button-lg {
