--- a/hackathon/src/styles.css
+++ b/hackathon/src/styles.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
 html,
@@ -40,10 +40,18 @@ body {
   @apply p-8 backdrop-blur-xl backdrop-brightness-50 border border-white/10 rounded-2xl;
 }
 
+.border-card {
+  @apply p-8 border border-white/10 rounded-2xl;
+}
+
 .button {
   @apply w-full border-white/90 border text-white bg-transparent hover:bg-white hover:text-black p-4 block text-center rounded-md transition-all font-mono duration-700;
 }
 
 .cta-button {
   @apply border-white/80 border backdrop-blur-md backdrop-brightness-75 bg-black/20 rounded-md p-3 text-center font-medium hover:bg-white transition-all hover:text-black cursor-pointer font-mono;
+}
+
+.section-thing {
+  @apply px-40 backdrop-brightness-50 mx-auto text-white items-center justify-between h-screen flex;
 }
